--- a/actions/maven-release/action.yml
+++ b/actions/maven-release/action.yml
@@ -14,11 +14,11 @@ runs:
       shell: bash
       run: |
         git checkout ${{ steps.prepare-release-branch.outputs.RELEASE_BRANCH_NAME }}
-#    - name: Change release version
-#      id: change-release-version
-#      uses: stezsky/shared-actions/actions/change-pom-version@main
-#      with:
-#        new-version: ${{ steps.prepare-release-branch.outputs.VERSION_NUMBER }}
+    - name: Change release version
+      id: change-release-version
+      uses: stezsky/shared-actions/actions/change-pom-version@main
+      with:
+        new-version: ${{ steps.prepare-release-branch.outputs.VERSION_NUMBER }}
 #    - name: Build Release
 #      id: build-release
 #      uses: stezsky/shared-actions/actions/java-pipeline@main
