--- a/actions/setup-maven-build/action.yml
+++ b/actions/setup-maven-build/action.yml
@@ -9,3 +9,7 @@ runs:
         distribution: 'temurin'
         java-version: '17'
         cache: 'maven'
+    - name: "Install Maven"
+      run: |
+        sudo apt-get update
+        sudo apt-get install -y maven
