--- a/actions/setup-maven-build/action.yml
+++ b/actions/setup-maven-build/action.yml
@@ -1,20 +1,34 @@
 name: 'Setup Maven Build'
 description: 'Setup build environment for Maven/Java'
 author: 'petr.steckovic@vodafone.com'
+inputs:
+  maven-version:
+    description: 'Maven version'
+    required: true
+    default: '3.9.9'
+  java-version:
+    description: 'Java version'
+    required: true
+    default: '17'
+  java-distribution:
+    description: 'Java Distribution'
+    required: true
+    default: 'temurin'
+
 runs:
   using: 'composite'
   steps:
     - uses: actions/setup-java@v4
       with:
-        distribution: 'temurin'
-        java-version: '17'
+        distribution: ${{ github.event.inputs.java-distribution }}
+        java-version: ${{ github.event.inputs.java-version }}
         cache: 'maven'
     - name: "Install Maven"
       shell: bash
       run: |
-        wget https://downloads.apache.org/maven/maven-3/3.9.9/binaries/apache-maven-3.9.9-bin.tar.gz
-        tar -xvzf apache-maven-3.9.0-bin.tar.gz -C /opt
-        sudo ln -s /opt/apache-maven-3.9.0 /opt/maven
+        wget https://downloads.apache.org/maven/maven-3/${{ github.event.inputs.maven-version }}/binaries/apache-maven-${{ github.event.inputs.maven-version }}-bin.tar.gz
+        tar -xvzf apache-maven-${{ github.event.inputs.maven-version }}-bin.tar.gz -C /opt
+        sudo ln -s /opt/apache-maven-${{ github.event.inputs.maven-version }} /opt/maven
         
         export M2_HOME=/opt/maven
         export MAVEN_HOME=/opt/maven
