--- a/actions/setup-maven-build/action.yml
+++ b/actions/setup-maven-build/action.yml
@@ -18,24 +18,21 @@ inputs:
 runs:
   using: 'composite'
   steps:
-    - name: Debug Java Distribution
-      shell: bash
-      run: |
-        echo "Java Distribution: ${{ inputs.java-distribution }}"
     - uses: actions/setup-java@v4
       with:
-        distribution: ${{ github.event.inputs.java-distribution }}
-        java-version: ${{ github.event.inputs.java-version }}
+        distribution: ${{ inputs.java-distribution }}
+        java-version: ${{ inputs.java-version }}
         cache: 'maven'
     - name: "Install Maven"
       shell: bash
       run: |
-        wget https://downloads.apache.org/maven/maven-3/${{ github.event.inputs.maven-version }}/binaries/apache-maven-${{ github.event.inputs.maven-version }}-bin.tar.gz
-        tar -xvzf apache-maven-${{ github.event.inputs.maven-version }}-bin.tar.gz -C /opt
-        sudo ln -s /opt/apache-maven-${{ github.event.inputs.maven-version }} /opt/maven
+        wget https://downloads.apache.org/maven/maven-3/${{ inputs.maven-version }}/binaries/apache-maven-${{ inputs.maven-version }}-bin.tar.gz
+        tar -xvzf apache-maven-${{ inputs.maven-version }}-bin.tar.gz -C /opt
+        sudo ln -s /opt/apache-maven-${{ inputs.maven-version }} /opt/maven
         
         export M2_HOME=/opt/maven
         export MAVEN_HOME=/opt/maven
         export PATH=$PATH:/opt/maven/bin
         
+        java -version
         mvn -version
