--- a/actions/setup-maven-build/action.yml
+++ b/actions/setup-maven-build/action.yml
@@ -30,9 +30,19 @@ runs:
         tar -xvzf apache-maven-${{ inputs.maven-version }}-bin.tar.gz -C /opt
         sudo ln -s /opt/apache-maven-${{ inputs.maven-version }} /opt/maven
         
-        export M2_HOME=/opt/maven
-        export MAVEN_HOME=/opt/maven
-        export PATH=$PATH:/opt/maven/bin
-        
+#        export M2_HOME=/opt/maven
+#        export MAVEN_HOME=/opt/maven
+#        export PATH=$PATH:/opt/maven/bin
+
+        echo "export M2_HOME=/opt/maven" >> ~/.bashrc
+        echo "export MAVEN_HOME=/opt/maven" >> ~/.bashrc
+        echo "export PATH=$PATH:/opt/maven/bin" >> ~/.bashrc
+
+
+#        java -version
+#        mvn -version
+    - name: "Verify installation"
+      shell: bash
+      run: |
         java -version
         mvn -version
