--- a/actions/setup-maven-build/action.yml
+++ b/actions/setup-maven-build/action.yml
@@ -27,12 +27,14 @@ runs:
       shell: bash
       run: |
         wget https://downloads.apache.org/maven/maven-3/${{ inputs.maven-version }}/binaries/apache-maven-${{ inputs.maven-version }}-bin.tar.gz
-        tar -xvzf apache-maven-${{ inputs.maven-version }}-bin.tar.gz -C /opt
+        tar -xzf apache-maven-${{ inputs.maven-version }}-bin.tar.gz -C /opt
         sudo ln -s /opt/apache-maven-${{ inputs.maven-version }} /opt/maven
 
         echo "export M2_HOME=/opt/maven" >> ~/.bashrc
         echo "export MAVEN_HOME=/opt/maven" >> ~/.bashrc
         echo "export PATH=$PATH:/opt/maven/bin" >> ~/.bashrc
+        
+        source ~/.bashrc
     - name: "Verify installation"
       shell: bash
       run: |
