--- a/actions/setup-maven-build/action.yml
+++ b/actions/setup-maven-build/action.yml
@@ -35,6 +35,8 @@ runs:
         echo "export PATH=$PATH:/opt/maven/bin" >> ~/.bashrc
         
         source ~/.bashrc
+        
+        env
     - name: "Verify installation"
       shell: bash
       run: |
