--- a/actions/setup-maven-build/action.yml
+++ b/actions/setup-maven-build/action.yml
@@ -30,12 +30,9 @@ runs:
         tar -xzf apache-maven-${{ inputs.maven-version }}-bin.tar.gz -C /opt
         sudo ln -s /opt/apache-maven-${{ inputs.maven-version }} /opt/maven
 
-        echo "export M2_HOME=/opt/maven" >> ~/.bashrc
-        echo "export MAVEN_HOME=/opt/maven" >> ~/.bashrc
-        echo "export PATH=$PATH:/opt/maven/bin" >> ~/.bashrc
-        
-        source ~/.bashrc
-        
+        echo "M2_HOME=/opt/maven" >> $GITHUB_ENV
+        echo "MAVEN_HOME=/opt/maven" >> $GITHUB_ENV
+        echo "PATH=$PATH:/opt/maven/bin" >> $GITHUB_ENV
         env
     - name: "Verify installation"
       shell: bash
