--- a/actions/change-pom-version/action.yml
+++ b/actions/change-pom-version/action.yml
@@ -10,7 +10,7 @@ runs:
   steps:
     - name: Set maven version
       run: |
-        mvn versions:set -DnewVersion=${{ github.event.inputs.new-version }}
+        mvn versions:set -X -DnewVersion=${{ github.event.inputs.new-version }}
         mvn versions:commit
     - name: Validate no SNAPSHOT dependencies
       if: "! contains(github.event.inputs.new-version, 'SNAPSHOT')"
