--- a/actions/setup-maven-build/action.yml
+++ b/actions/setup-maven-build/action.yml
@@ -29,10 +29,11 @@ runs:
         wget https://downloads.apache.org/maven/maven-3/${{ inputs.maven-version }}/binaries/apache-maven-${{ inputs.maven-version }}-bin.tar.gz
         tar -xzf apache-maven-${{ inputs.maven-version }}-bin.tar.gz -C /opt
         sudo ln -s /opt/apache-maven-${{ inputs.maven-version }} /opt/maven
-
+  
         echo "M2_HOME=/opt/maven" >> $GITHUB_ENV
         echo "MAVEN_HOME=/opt/maven" >> $GITHUB_ENV
         echo "PATH=$PATH:/opt/maven/bin" >> $GITHUB_ENV
+        echo "MAVEN_OPTS='-Dhttps.protocols=TLSv1.2 -Dmaven.wagon.http.ssl.insecure=true -Dmaven.wagon.http.ssl.allowall=true --add-opens=java.base/java.lang=ALL-UNNAMED'" >> $GITHUB_ENV
     - name: "Verify installation"
       shell: bash
       run: |
