--- a/actions/setup-maven-build/action.yml
+++ b/actions/setup-maven-build/action.yml
@@ -34,20 +34,25 @@ runs:
         echo "MAVEN_HOME=/opt/maven" >> $GITHUB_ENV
         echo "PATH=$PATH:/opt/maven/bin" >> $GITHUB_ENV
         echo "MAVEN_OPTS=-Dhttps.protocols=TLSv1.2 -Dmaven.wagon.http.ssl.insecure=true -Dmaven.wagon.http.ssl.allowall=true --add-opens=java.base/java.lang=ALL-UNNAMED" >> $GITHUB_ENV
-        cat > ~/.m2/settings.xml <<EOF
-          <settings>
-            <proxies>
-              <proxy>
-                <id>vfcz-proxy</id>
-                <active>true</active>
-                <protocol>https</protocol>
-                <host>proxycz.oskarmobil.cz</host>
-                <port>3128</port>
-                <nonProxyHosts>*.oskarmobil.cz|localhost|raw.githubusercontent.com</nonProxyHosts>
-              </proxy>
-            </proxies>
-            </settings>
-        EOF
+        # set proxy if set in environment variables
+        if [ -n "$HTTPS_PROXY" ]; then
+          PROXY_HOST=$(echo "$HTTPS_PROXY" | sed -E 's|https?://||' | cut -d: -f1)
+          PROXY_PORT=$(echo "$HTTPS_PROXY" | sed -E 's|https?://||' | cut -d: -f2)
+          cat > ~/.m2/settings.xml <<EOF
+            <settings>
+              <proxies>
+                <proxy>
+                  <id>vfcz-proxy</id>
+                  <active>true</active>
+                  <protocol>https</protocol>
+                  <host>${PROXY_HOST}</host>
+                  <port>${PROXY_PORT}</port>
+                  <nonProxyHosts>*.oskarmobil.cz|localhost|raw.githubusercontent.com</nonProxyHosts>
+                </proxy>
+              </proxies>
+              </settings>
+          EOF
+        fi
     - name: "Verify installation"
       shell: bash
       run: |
