--- a/actions/setup-maven-build/action.yml
+++ b/actions/setup-maven-build/action.yml
@@ -52,6 +52,8 @@ runs:
               </proxies>
               </settings>
           EOF
+        else
+          echo "No proxy set"
         fi
     - name: "Verify installation"
       shell: bash
