--- a/actions/setup-maven-build/action.yml
+++ b/actions/setup-maven-build/action.yml
@@ -22,7 +22,7 @@ runs:
       with:
         distribution: ${{ inputs.java-distribution }}
         java-version: ${{ inputs.java-version }}
-        cache: 'maven'
+        #cache: 'maven'
     - name: "Install Maven"
       shell: bash
       run: |
